k8s/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openq-core
---
apiVersion: v1
kind: Namespace
metadata:
  name: openq-workers
